--- a/templates/edit_todo.html
+++ b/templates/edit_todo.html
@@ -9,7 +9,7 @@
         <h1>Редактировать задачу</h1>
         <form method="POST">
             <input type="text" name="task" value="{{ todo.task }}" required>
-            <button type="submit">Сохранить изменения</button>
+            <button type="submit">Сохранить</button>
             <a href="{{ url_for('todos_page') }}">Отмена</a>
         </form>
     </div>
